# rust-keylock-android

./: .gitignore  .travis.yml  README.md  build.gradle  buildall.sh  rkl.jks.enc  settings.gradle
App/: build.gradle
App/src/main/res/layout/: directory_element.xml  fragment_change_password.xml  fragment_edit_configuration.xml  fragment_enter_password.xml  fragment_exit_menu.xml  fragment_main_menu.xml
App/src/main/res/values/: strings.xml  styles.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  entry_element.xml  file_element.xml  fragment_change_password.xml  fragment_edit_configuration.xml  fragment_enter_password.xml  fragment_exit_menu.xml  fragment_list_entries.xml  fragment_main_menu.xml  fragment_please_wait.xml  fragment_select_path.xml  fragment_show_entry.xml  fragment_show_message.xml
java/: .gitignore  AndroidManifest.xml  pom.xml
java/res/layout/: directory_element.xml  entry_element.xml  fragment_change_password.xml  fragment_directory_selector.xml  fragment_edit_configuration.xml  fragment_enter_password.xml  fragment_exit_menu.xml  fragment_file_selector.xml  fragment_list_entries.xml  fragment_main_menu.xml  fragment_please_wait.xml  fragment_select_path.xml  fragment_show_entry.xml
java/res/menu/: main.xml
java/res/values/: strings.xml  styles.xml
java/rust-build/: build_rust_for_rust_keylock_android.sh  pre_build_rust_keylock_android.sh
ks/: .gitignore
metadata/en-US/: full_description.txt  short_description.txt  summary.txt  title.txt
metadata/en-US/changelogs/: 001301.txt  1401.txt  1500.txt  1602.txt
metadata/ru-RU/: full_description.txt  short_description.txt
rust/: .gitignore  Cargo.toml  Xargo.toml
rust-build/: build_rust_for_rust_keylock_android.sh  fdroid_build.sh  fdroid_pre_build.sh  pre_build_rust_keylock_android.sh  setenv-android.sh
rust/src/: android_editor.rs  errors.rs  japi.rs  lib.rs  logger.rs
(+82 files in other folders)
