[package]
name = "rustkeylockandroid"
version = "0.16.0"
authors = ["aston <astonbitecode@gmail.com>"]
edition = "2018"

[lib]
name = "rustkeylockandroid"
crate-type = ["cdylib"]

[dependencies]
rust_keylock = { path = "../../rust-keylock-lib" }
j4rs = { path = "../../../j4rs/rust" }
j4rs_derive = "0.1"
libc = "0.2"
jni-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
log = "0.4"
android_logger = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
zeroize = {version = "1.8", features = ["zeroize_derive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
